--- a/README
+++ b/README
@@ -1,12 +1,31 @@
-css/bootstrap4 has template css
-cs/style has practicals css
+### File Structure
+1. css/bootstrap4-neon-glow.css - Template CSS File
+2. css/style.css - Particles.JS CSS File
+3. css/coc.css - Code of Conduct CSS File
+4. css/scrollbar.css - Custom Scrollbar CSS File
 
-js/*
-has a practicals javascripts
+5. js/app.js - Particles.JS JavaScript File
+6. js/particles.js - Particles.JS JavaScript File
+7. js/lib/stats.js - Particles.JS JavaScript File
 
-Edit index.html acordingly 
+8. media/cs2.mp4 - Coming Soon Video File
 
-Template Help 
-https://hackerthemes.com/bootstrap-themes/demo/neon-glow/
+9. index.html - Landing Page
+10. events.html - Events Page
+11. achievements.html - Achievements Page
+12. code-of-conduct.html - Code of Conduct Page
+13. team-tcs.html - Team Members Page
+14. about.html - About Us Page
 
-also apply beautiful font :)
+### TODO
+1. Add Events & Achievements Pages
+2. Change Background Color if required
+3. Design Team TCA Page
+
+
+### Template Help 
+[Neon Glow](https://hackerthemes.com/bootstrap-themes/demo/neon-glow/)
+
+```
+Also apply beautiful font :)
+```
